Update Varin AI 1.3

--- a/Update - อัปเดต/Varin AI 1.3
+++ b/Update - อัปเดต/Varin AI 1.3
@@ -1,8 +1,8 @@
-Varin AI 1.3
+Vesper 1.3
 เผยแพร่: 6 เมษายน 2025
 การอัปเดตเพื่อแก้ไขข้อบกพร่องและปรับปรุงระบบซื้อ Keypass
 
-✓ โมเดลภาษาใหม่ VarinOS 1.1.4 Alpha
+✓ โมเดลภาษาใหม่ VesperOS 1.1.4 Alpha
 ปรับปรุงโมเดลภาษาให้มีความแม่นยำมากขึ้น สามารถเข้าใจบริบทและความหมายที่ซับซ้อนได้ดีขึ้น 8%
 
 ✓ ระบบ Keypass
