Update Varin AI 1.2

--- a/Update - อัปเดต/Varin AI 1.2
+++ b/Update - อัปเดต/Varin AI 1.2
@@ -1,8 +1,8 @@
-Varin AI 1.2
+Vesper 1.2
 เผยแพร่: 4 เมษายน 2025
 การอัปเดตเพื่อแก้ไขข้อบกพร่องและปรับปรุงเสถียรภาพ
 
-✓ โมเดลภาษาใหม่ VarinOS 1.1.2 Alpha
+✓ โมเดลภาษาใหม่ VesperOS 1.1.2 Alpha
 ปรับปรุงโมเดลภาษาให้มีความแม่นยำมากขึ้น สามารถเข้าใจบริบทและความหมายที่ซับซ้อนได้ดีขึ้น 10%
 
 ✓ การแก้ไขข้อบกพร่อง
